# rust-auth-service

./: Cargo.toml  README.md  local.env
src/: main.rs  routes.rs
src/config/: index.rs
src/controller/: user.rs
src/db/: index.rs
src/redis/: index.rs  mod.rs  ops.rs
src/schema/: user.rs
src/socket/: index.rs
src/state/: index.rs
src/utils/: general.rs  is_empty.rs  json_convert.rs  jwt.rs  mod.rs  password.rs
src/validator/: auth.rs  jwt.rs
