[package]
name = "rust_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
once_cell = "1.21.3"
tokio = { version = "1.41", features = ["full"] }
fred = { version = "7", features = ["enable-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1.0"
axum = "0.8.6"
regex = "1.12.2"
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"
chrono = "0.4"
socketioxide = "0.18.x"
tower = "0.5.2"
hyper = "1.8.1"
